[gd_scene load_steps=2 format=3 uid="uid://w7ahp7wgpic5"]

[ext_resource type="Script" path="res://main.gd" id="1_4gqo2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_4gqo2")

[node name="Title" type="Label" parent="."]
z_index = 100
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 20.0
offset_right = 480.0
offset_bottom = 45.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Cpp (Server)"

[node name="FPS" type="Label" parent="."]
z_index = 100
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1080.0
offset_right = 1280.0
offset_bottom = 48.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "FPS: "

[node name="Count" type="Label" parent="."]
z_index = 100
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1080.0
offset_top = 48.0
offset_right = 1279.0
offset_bottom = 93.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Object:"

[node name="SpriteMgr" type="SpriteServerCpp" parent="."]

[node name="SpawnButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 624.0
offset_right = 208.0
offset_bottom = 704.0
toggle_mode = true
text = "Spawn"

[node name="ClearButton" type="Button" parent="."]
offset_left = 216.0
offset_top = 624.0
offset_right = 408.0
offset_bottom = 704.0
toggle_mode = true
text = "Clear"
